--- a/UBCollecting/app/src/main/res/values/strings.xml
+++ b/UBCollecting/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="submit_button_label">Submit</string>
     <string name="update_button_label">Update</string>
+    <string name="email_label">Email</string>
+    <string name="password_label">Password</string>
+    <string name="login_button_label">Login</string>
+    <string name="login_error">Incorrect Email or Password</string>
 </resources>
