--- a/UBCollecting/app/src/main/res/values/strings.xml
+++ b/UBCollecting/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="login_button_label">Login</string>
     <string name="done_button_label">Done</string>
     <string name="login_error">Incorrect Email or Password</string>
+    <string name="select_question_properties">Please Select All Desired Properties: </string>
+    <string name="select_question_languages">Please Select All Question Languages: </string>
+
+
 </resources>
