--- a/UBCollecting/app/src/main/res/values/strings.xml
+++ b/UBCollecting/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="login_error">Incorrect Email or Password</string>
     <string name="select_question_properties">Please Select All Desired Properties: </string>
     <string name="select_question_languages">Please Select All Question Languages: </string>
+    <string name="languages">Languages</string>
 
 
 </resources>
